Add create input files for Create file function